--- a/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Localized Contents/zh-Hant.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hant.xcloc/Localized Contents/zh-Hant.xliff
@@ -2231,13 +2231,9 @@ Retrieved</source>
         <note/>
       </trans-unit>
       <trans-unit id="app.language.restartRequired.description" xml:space="preserve">
-        <source>To apply these changes, the app needs to restart.
-
-This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
-        <target state="translated">要套用這些變更，應用程式需要重新啟動。
-
-這不適用於小工具和已排定的通知。詳細資訊請查看FAQ。</target>
-        <note/>
+        <source>This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
+        <target state="translated">這不適用於小工具和已排定的通知。詳細資訊請查看FAQ。</target>
+        <note>Something is already mentioned in `settings.disclaimer.requiringAppRebootToApplySettings`.</note>
       </trans-unit>
       <trans-unit id="dpv.characterInventory.navTitle" xml:space="preserve">
         <source>Character Inventory List</source>
