--- a/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Localized Contents/fr.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/fr.xcloc/Localized Contents/fr.xliff
@@ -2229,13 +2229,9 @@ Retrieved</source>
         <note/>
       </trans-unit>
       <trans-unit id="app.language.restartRequired.description" xml:space="preserve">
-        <source>To apply these changes, the app needs to restart.
-
-This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
-        <target state="translated">Pour appliquer ces changements, l'application doit redémarrer.
-
-Ceci ne s'applique pas aux widgets et notifications programmées. Consultez la FAQ pour plus de détails.</target>
-        <note/>
+        <source>This does not apply to Widget and scheduled notifications. See FAQ for details.</source>
+        <target state="translated">Ceci ne s'applique pas aux widgets et notifications programmées. Consultez la FAQ pour plus de détails.</target>
+        <note>Something is already mentioned in `settings.disclaimer.requiringAppRebootToApplySettings`.</note>
       </trans-unit>
       <trans-unit id="dpv.characterInventory.navTitle" xml:space="preserve">
         <source>Character Inventory List</source>
